# data-dialysis

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  THREAT_MODEL.md  benchmark_results.csv  benchmark_xml_ingestion.py  docker-compose.yml  generate_xml_test_files.py  pyproject.toml  pytest.ini  requirements.txt  test_batch.csv  test_batch.json  test_batch.xml  test_csv_ingestion.py  test_dashboard_api.py  test_json_ingestion.py  test_xml_ingestion.py  xml_config.json
.cursor/rules/: architect.mdc
.github/workflows/: dashboard-ci.yml
dashboard-frontend/: .dockerignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
dashboard-frontend/app/: page.tsx  (+1 more)
docs/: BATCH_NER_IMPLEMENTATION.md  CHANGE_DATA_CAPTURE_PLAN.md  DASHBOARD_DEPLOYMENT.md  DASHBOARD_FRONTEND_PHASE1_COMPLETE.md  DASHBOARD_PHASE1_COMPLETE.md  DASHBOARD_PHASE4_COMPLETE.md  INGESTION_OPTIMIZATION_PROPOSAL.md  README.md  REDACTION_LOGGING.md
examples/: README.md  end_to_end_flow.py  end_to_end_flow_with_security_report.py  storage_adapter_usage.py
performance_benchmark/: academic_benchmark_suite.py  analyze_benchmark_results.py  generate_bad_data.py  generate_csv_test_file.py  generate_json_test_file.py  generate_xml_test_files.py  visualize_benchmark_results.py
src/: cli.py  main.py
tests/: __init__.py  test_config_manager_connection_string.py  test_csv_ingestion.py  test_golden_record.py  test_json_ingestion.py  test_postgres_adapter.py  test_postgresql_adapter_dataframe.py  test_security_bad_data.py  test_xml_ingestion.py
(+94 files in other folders)
