[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datadialysis"
version = "1.0.0"
description = "Self-Securing Clinical Data Ingestion Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.0",
    "pandas>=2.3.0",
    "defusedxml>=0.7.1",
    "lxml>=5.0.0",
    "duckdb>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
datadialysis = "src.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "hypothesis>=6.0.0",
]

